Accuracy 100% Random Forest

--- a/MachineLearningCairoUniversity/5- Random Forest (Fertility)/Fertility - Random forest -.ipynb
+++ b/MachineLearningCairoUniversity/5- Random Forest (Fertility)/Fertility - Random forest -.ipynb
@@ -81,7 +81,7 @@
     "    - normal (N) \n",
     "    - altered (O)\n",
     "    \n",
-    "[You can download Fertility Data Set from UCI](https://archive.ics.uci.edu/ml/datasets/Fertility#)\n"
+    "[You can download Fertility Data Set from Kaggle](https://www.kaggle.com/muhamedyoussry/fertility-data-set)\n"
    ]
   },
   {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "4                                      9   Altered  "
       ]
      },
-     "execution_count": 483,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "4                                      9          0  "
       ]
      },
-     "execution_count": 486,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "max                               342.000000    1.000000  "
       ]
      },
-     "execution_count": 487,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
        "Name: Number of hours spent sitting per day, dtype: int64"
       ]
      },
-     "execution_count": 488,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "50                                    342          1  "
       ]
      },
-     "execution_count": 489,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 492,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,16 +869,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ab96383408>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x27c44368fc8>"
       ]
      },
-     "execution_count": 541,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -898,6 +898,8 @@
    "source": [
     "# to visualize the correlatin between the data \n",
     "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np \n",
     "\n",
     "corr = fertility.corr()\n",
     "mask = np.zeros_like(corr)\n",
@@ -908,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -925,8 +927,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "fertility.hist(bins = 30 , figsize=(15,10))\n",
     "plt.show()"
    ]
@@ -949,19 +949,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# split our data to features and output \n",
     "\n",
-    "X = fertility.drop(\"Diagnosis\" , axis = 1 )\n",
+    "X = fertility.drop(\"Diagnosis\" , axis = 1)\n",
     "y = fertility[\"Diagnosis\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1001,27 +1001,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>Random forest</td>\n",
-       "      <td>0.971429</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.942857</td>\n",
+       "      <td>0.933333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>SVM</td>\n",
-       "      <td>0.942857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Logistics regression</td>\n",
-       "      <td>0.942857</td>\n",
+       "      <td>0.933333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Naive bayes</td>\n",
-       "      <td>0.914286</td>\n",
+       "      <td>0.933333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Logistics regression</td>\n",
+       "      <td>0.933333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Decision tree</td>\n",
-       "      <td>0.742857</td>\n",
+       "      <td>0.866667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1029,15 +1029,15 @@
       ],
       "text/plain": [
        "                      Accuracy Score\n",
-       "Random forest               0.971429\n",
-       "KNN                         0.942857\n",
-       "SVM                         0.942857\n",
-       "Logistics regression        0.942857\n",
-       "Naive bayes                 0.914286\n",
-       "Decision tree               0.742857"
+       "Random forest               1.000000\n",
+       "KNN                         0.933333\n",
+       "SVM                         0.933333\n",
+       "Naive bayes                 0.933333\n",
+       "Logistics regression        0.933333\n",
+       "Decision tree               0.866667"
       ]
      },
-     "execution_count": 637,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,9 +1052,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# split the data to train and test model\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.35, random_state=0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.15, random_state=42)\n",
     "\n",
-    "dec = DecisionTreeClassifier(max_depth=3)\n",
+    "dec = DecisionTreeClassifier() \n",
     "ran = RandomForestClassifier(n_estimators=100)\n",
     "knn = KNeighborsClassifier()\n",
     "svm = SVC(random_state=1)\n",
